# callective-report-generator

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
data/: bat_primary_questionnaires.json  bat_secondary_questionnaires.json  emotional_labor_questionnaires.json  stress_questionnaires.json
data/analysis/: participant_analysis.json
data/questionnaires/: bat_primary_questionnaires.json  bat_secondary_questionnaires.json  emotional_labor_questionnaires.json
src/: analyze_app_usage.py  analyze_results.py  cutoff_values.py  distribution_change.py  fetch_spreadsheet.py  generate_team_figures.py  main.py  parse_bat_primary.py  parse_raw.py  parse_raw_csv.py  participant_id_manager.py  personal_report_generator.py
src/interview/: analyze_participant_data.py
src/util/: analysis_parser.py  app_analysis_parser.py  bat_distribution_change.py  bat_primary_distribution.py  bat_primary_summary.py  bat_secondary_summary.py  count_mind_records.py  datetime_parser.py  detailed_emotion_counter.py  emotional_labor_distribution.py  emotional_labor_risk_summary.py  emotional_labor_summary.py  hourly_emotion_factor_analysis.py  print_team1_week8_job_demand.py  stress_distribution.py  stress_distribution_change.py  stress_summary.py  t4_app_usage_counter.py  team2_bat_visualizer.py  team2_bat_visualizer_new.py  team_bat_visualizer.py  week10_summary_csv.py  week6_summary_csv.py  week8_stress_summary_csv.py  (+4 more)
template/: personal_template.html
templates/: personal_template.html  report_template.html
web/: personal_template.html  test.html
(+21 files in other folders)
