[project]
name = "report-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "playwright>=1.52.0",
    "reportlab>=4.4.0",
    "requests>=2.32.3",
    "scipy>=1.12.0",
]
